<resources>
    <string name="app_name">xcloudKt</string>
    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="home">首页</string>
    <string name="main">根页面</string>
    <string name="coupons">领券</string>
    <string name="chat">二维码</string>
    <string name="mine">我的</string>
    <string name="member">会员码</string>
    <string name="try_now">立即体验</string>
    <string name="splash">闪屏页</string>
    <string name="new_dialog">新人礼</string>
    <string name="guide">引导页</string>
    <string name="lable">标签页</string>
    <string name="activity_new_detail">新品上市</string>
    <string name="activity_new_pro_detail">新品抢先知</string>
    <string name="login">登录</string>
    <string name="band_phone">手机号绑定</string>
    <string name="location">
        <Data>
            <![CDATA[是否允许<font color="#018CD7">“Fa米家”</font>获取地理位置信息？]]>
        </Data>
    </string>
    <string name="login_phone_number">请输入手机号</string>
    <string name="login_phone_error_hint">请输入正确的手机号</string>
    <string name="login_phone_code_success">短信验证码发送成功</string>
    <string name="login_phone_code">请输入验证码</string>
    <string name="login_code">验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_get_code2">重新获取</string>
    <string name="login_get_code3">秒后可重发</string>
    <string name="is_login_title">个人信息保护指引</string>
    <string name="is_login_title_">欢迎您使用Fa米家APP！</string>
    <string name="is_login_title2">为了保护您的合法权益，您务必仔细阅读并充分理解《Fa米家会员服务协议》及《个人信息保护政策》相关内容，尤其包括:</string>
    <string name="is_login_title3">为了更好的为您提供阅读资讯、商品优惠信息等相关服务，我们会根据您使用服务的具体功能需要收集必要的用户信息，您可以通过阅读《用户服务协议》与《隐私政策》了解我们收集、使用、存储、分享个人信息的情况，以及对您的个人隐私的保护措施。 如您同意，请点击“同意”开始接受我们的服务。</string>
    <string name="login_hint">我已阅读并同意《Fa米家会员服务协议》及《个人信息保护政策》</string>
    <string name="mine_type_tips">1、《Fa米家会员服务协议》中责任限制或免除的条款；\n2、《个人信息保护政策》中如何收集、使用及共享个人信息的条款；\n3、争议解决及管辖条款；\n4、其他加粗或显著提示的条款\n若您对上述内容有任何建议或疑问的，可通过公示的渠道联系我们。</string>
    <string name="mine_type_tips_">《用户服务协议》和《隐私协议》</string>
    <string name="login_hint1">为了更好的为您提供阅读资讯、商品优惠信息等相关服务，我们会根据您使用服务的具体功能需要收集必要的用户信息，您可以通过阅读《用户服务协议》与《隐私协议》了解我们收集、使用、存储、分享个人信息的情况，以及对您的个人隐私的保护措施。\n""如您同意，请点击“同意”开始接受我们的服务。</string>
    <string name="login_hint2">《Fa米家会员服务协议》</string>
    <string name="login_hint3">《个人信息保护政策》</string>
    <string name="login_hint4">请勾选服务协议</string>
    <string name="login_other_type">其他登录方式</string>
    <string name="over">已经到底啦</string>
    <string name="login_wechat">微信</string>
    <string name="login_wechat2">微信支付</string>
    <string name="login_ali">支付宝</string>
    <string name="login_alliance">集享联盟</string>
    <string name="login_Apple">Apple</string>
    <string name="invite_error">生成二维码失败</string>
    <string name="home_new_pro_detail_money">金额：</string>
    <string name="invite_error2">生成条形码失败</string>
    <string name="invite_error_change">切换条形码</string>
    <string name="invite_error_change2">切换二维码</string>
    <string name="man">男神</string>
    <string name="wman">女神</string>
    <string name="zx_name">尊享会员</string>
    <string name="jx_name">集享会员</string>
    <string name="login_surname">请输入姓氏</string>
    <string name="login_name">请输入名字</string>
    <string name="login_name2">请输入昵称</string>
    <string name="login_birthday">请选择生日</string>
    <string name="login_stu">确定并注册</string>
    <string name="personal_info">个人资料</string>
    <string name="personal_info_setting">个人设置</string>
    <string name="submit_suggest">提交</string>
    <string name="update_head">头像</string>
    <string name="take_Photo">拍照</string>
    <string name="do_select_xiangce">从相册上传</string>
    <string name="picture_select_failure">图片选择失败</string>
    <string name="take_photo_failure">拍照失败</string>
    <string name="do_cancel">取消</string>
    <string name="lock_details">查看详情</string>
    <string name="address_load">门店查询</string>
    <string name="address_no">上海</string>
    <string name="net_post_no_network">请检查您的网络~</string>
    <string name="login_code_error">输入验证码错误！</string>
    <string name="home_my_mili">我的Fa米粒</string>
    <string name="home_coupons">领券中心</string>
    <string name="home_feima">Fa米外卖</string>
    <string name="home_my_bill">我的账单</string>
    <string name="home_Discount">优惠券包</string>
    <string name="card_details">优惠券详情页</string>
    <string name="card_details_use">兑换码</string>
    <string name="home_mili_exchange">Fa米粒兑换</string>
    <string name="home_mili_exchange_detail">Fa米粒兑换详情页</string>
    <string name="grain_exchange_gift">Fa米粒兑好礼</string>
    <string name="home_sign">签到</string>
    <string name="home_scanGO">扫码购</string>
    <string name="home_store_search">门店查询</string>
    <string name="mine_zd">账单详情</string>
    <string name="detail">详情</string>
    <string name="scan_go">扫码购</string>
    <string name="mine_no_money">全家陪伴: 本月尚未消费</string>
    <string name="mine_vip_date">尊享卡到期时间: </string>
    <string name="home_jin">金刚区</string>
    <string name="home_icon">按钮</string>
    <string name="dian_zi_ticket">电子发票</string>
    <string name="dian_zi_xiao_ticket">电子小票</string>
    <string name="receive_ok">领取成功</string>
    <string name="home_new">新品上市</string>
    <string name="home_new_pro">新品抢先知</string>
    <string name="home_brand">品牌专区</string>
    <string name="home_today">今日特惠</string>
    <string name="home_new_to">上新榜</string>
    <string name="chat_details">聊天页面</string>
    <string name="mili_money">您当前的账户的Fa米粒的余额为：</string>
    <string name="mili">Fa米粒</string>
    <string name="zhang">张</string>
    <string name="mili_price">价格</string>
    <string name="mili_in_stock">库存</string>
    <string name="mili_limit">每人限兑2张</string>
    <string name="mili_limit_num">兑换数量</string>
    <string name="mili_pay">需支付</string>
    <string name="mili_exchange">兑换</string>
    <string name="im_ok">我知道了</string>
    <string name="code_text">该功能用于向商家付款时出示使用, 请不要将付款码发送给他人</string>
    <string name="card_title">优惠券包</string>
    <string name="use">使用</string>
    <string name="clear">清理</string>
    <string name="join">加入</string>
    <string name="use_now">立即使用</string>
    <string name="use_type">使用规则</string>
    <string name="exchange">兑换</string>
    <string name="product_detail_info">商品详情</string>
    <string name="exchange_success">兑换成功，预计2小时内到账!</string>
    <string name="exchange_failure">兑换失败</string>
    <string name="message_activity">活动消息</string>
    <string name="message_say">通知消息</string>
    <string name="message_system">系统消息</string>
    <string name="system_setting">系统设置</string>
    <string name="call_mine">联系我们</string>
    <string name="image_head">上传头像</string>
    <string name="nick_name_update">昵称修改</string>
    <string name="message_details">消息详情</string>
    <string name="address_change">切换门店</string>
    <string name="share_app_member">Fa米家-领券中心</string>
    <string name="share_app_member_text">我刚领到一张超值优惠券，手慢无，快点击领取～</string>
    <string name="search_address">没有找到匹配的结果\n建议您修改关键词重新搜索</string>
    <string name="search_country">请稍等一会儿，正在获取城市列表…</string>
    <string name="share_app">Fa米家</string>
    <string name="share_app_text">乐享生活，就在Fa米家</string>
    <string name="select">已选择</string>
    <string name="select2">选择</string>
    <string name="place_input_search_info">请输入要搜索的内容！</string>
    <string name="set_enjoy">集享专享</string>
    <string name="honour_enjoy">尊享专享</string>
    <string name="honour_price">尊享：%1$sFa米粒</string>
    <string name="jx_price">集享：%1$sFa米粒</string>
    <string name="order_code">订单编号：%1$s</string>
    <string name="order_time">兑换时间：%1$s</string>
    <string name="price">%1$d Fa米粒</string>
    <string name="current_account">您当前的账户的Fa米粒的余额为：%1$d Fa米粒</string>
    <string name="product_info_text_num">%1$d/%2$d</string>
    <string name="price_grain">价格  %1$d Fa米粒</string>
    <string name="inventory">库存  %1$d 张</string>
    <string name="bill_tip">当前账单功能处于测试阶段,部分数据可能存在缺失,敬请谅解</string>
    <string name="grain_num">%1$d Fa米粒</string>
    <string name="fa_grain_tip">Fa米粒一经兑换，不予退还</string>
    <string name="we_chart">微信</string>
    <string name="we_chart_ring">朋友圈</string>
    <string name="ali_pay">支付宝</string>
    <string name="flash_pay">云闪付</string>
    <string name="score">积分</string>
    <string name="stored_cash">储值金</string>
    <string name="bill_trade">%1$s笔/%2$s元</string>
    <string name="save_money">节省: %1$s元</string>
    <string name="save_money_sum">节省金额：%1$s元</string>
    <string name="save_money_sum_1">节省金额：¥%1$s元</string>
    <string name="get_score">已获: %1$s积分</string>
    <string name="total_spend_money">合计支出：%1$s元</string>
    <string name="total_spend">合计支付</string>
    <string name="have_get">已获</string>
    <string name="save">节省</string>
    <string name="have_save">已省</string>
    <string name="score_value">%1$s 积分</string>
    <string name="money">%1$s 元</string>
    <string name="money_split">%1$s 元</string>
    <string name="vouchers_amount">代金券</string>
    <string name="coupon_amount">商品券</string>
    <string name="promotion_amount">促销活动</string>
    <string name="product_coupon_value">券价值</string>
    <string name="promotion">促销活动</string>
    <string name="other_coupon">其他券</string>
    <string name="other_coupon_key">其他券</string>
    <string name="percent">%1$s%</string>
    <string name="mobile_way">移动支付</string>
    <string name="crash_way">储值金支付</string>
    <string name="score_way">积分支付</string>
    <string name="jin_e">金额:¥%1$s</string>
    <string name="num_price">%1$s * %2$s</string>
    <string name="base_score">基本积分:</string>
    <string name="extra_score">额外积分:</string>
    <string name="product_total">商品小计:</string>
    <string name="discount_total">折扣合计:</string>
    <string name="zero">找零:</string>
    <string name="pay_amount">支付金额:</string>
    <string name="pay_amount_info">支付金额</string>
    <string name="total_amount">合计金额:</string>
    <string name="amount">¥-%1$s</string>
    <string name="amount_normal">¥%1$s</string>
    <string name="save_tip">促销活动、券价值（商品、代金券）、卡权益（Fa米粒、点标等）</string>
    <string name="score_tip">包含促销积分、基本积分、额外积分</string>
    <string name="get_score_total">合计获得：¥%1$s积分</string>
    <string name="way_grain">渠道：%1$s</string>
    <string name="time_grain">时间：%1$s</string>
    <string name="add_grain">%1$dFML</string>
    <string name="subtract_grain">%1$dFML</string>
    <string name="group_category">组合</string>
    <string name="consumer_channel_time">[%1$s]: %2$s</string>
    <string name="trade_no">交易号: %1$s</string>
    <string name="total">合计: %1$s元</string>
    <string name="mine_grain_value">%1$dFML</string>
    <string name="grain_du_to_time">%1$s到期Fa米粒: %2$sFa米粒</string>
    <string name="exchange_product">兑换商品</string>
    <string name="online_pay_total">线上支付合计</string>
    <string name="offline_pay_total">线下消费合计</string>
    <string name="jx_score">集享积分:</string>
    <string name="family_score">全家积分:</string>
    <string name="other_score">其他品牌积分:</string>
    <string name="score_pay">积分支付:</string>
    <string name="list">列表</string>
    <string name="statistical">统计</string>
    <string name="get_add">%1$s</string>
    <string name="product_take_off">该商品已下架\n去看看其Ta商品吧</string>
    <string name="net_error">网络访问错误，请稍候尝试</string>
    <string name="empty">还没有数据哦</string>
    <string name="loading">正在加载…</string>
    <string name="down_loading">下载中，请稍候…</string>
    <string name="reload">请重新尝试</string>
    <string name="no_net">网络不可用，请检查一下您的网络</string>
    <string name="system_errror">系统异常，请稍候尝试</string>
    <string name="json_Exception">数据解析错误</string>
    <string name="empty_button">点击刷新</string>
    <string name="loading_button">取消</string>
    <string name="error_button">重试</string>
    <string name="more">更多</string>
    <string name="navigation_bottom_home">首页</string>
    <string name="navigation_bottom_getcoupon">领券</string>
    <string name="navigation_bottom_mine">我的</string>
    <string name="home_integral">积分购</string>
</resources>