<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.example.xcloudkt.view.layout.EmptyLayout
        android:id="@+id/ll_emptys"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:layout_marginBottom="@dimen/dp2">

            <LinearLayout
                android:id="@+id/rl_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_store"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp14"
                    android:drawableLeft="@drawable/home_left_address"
                    android:drawablePadding="@dimen/dp5"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/color33"
                    android:textSize="@dimen/font_size_13" />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="0.5dp"
                    android:layout_height="@dimen/dp12"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_marginRight="@dimen/dp5"
                    android:background="@color/light_darkgray"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_store_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/color33"
                    android:textSize="@dimen/font_size_13"
                    android:visibility="invisible" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp44"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp5">

                <ImageView
                    android:id="@+id/iv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:scaleType="centerInside"
                    android:src="@drawable/home_message" />

                <com.example.xcloudkt.view.msg.MsgView xmlns:mv="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/rtv_msg_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginBottom="@dimen/dp25"
                    android:layout_toRightOf="@+id/iv_message"
                    android:gravity="center"
                    android:text="99+"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_11"
                    mv:mv_backgroundColor="@color/colorEA45"
                    mv:mv_isRadiusHalfHeight="true"
                    mv:mv_strokeColor="@color/white"
                    mv:mv_strokeWidth="0dp" />
            </RelativeLayout>

        </RelativeLayout>

        <com.example.xcloudkt.view.layout.RecyclerScrollView
            android:id="@+id/sv_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/ll_layoutr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <cn.bingoogolapple.bgabanner.BGABanner
                    android:id="@+id/item_home_banner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp150"
                    android:scaleType="fitXY"
                    app:banner_pointContainerBackground="@android:color/transparent"
                    app:banner_pointDrawable="@drawable/selector_banner_unequal" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp16"
                    android:layout_marginBottom="@dimen/dp24"
                    android:overScrollMode="never" />

                <RelativeLayout
                    android:id="@+id/rl_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp14"
                    android:paddingLeft="@dimen/dp16"
                    android:paddingRight="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableStart="@drawable/home_left_new"
                        android:drawablePadding="@dimen/dp3"
                        android:text="@string/home_new"
                        android:textColor="@color/color33"
                        android:textSize="@dimen/font_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_new_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawableRight="@drawable/tip_to_right"
                        android:drawablePadding="@dimen/dp2"
                        android:text="@string/more"
                        android:textColor="@color/color33"
                        android:textSize="@dimen/font_size_11"
                        android:visibility="visible" />

                </RelativeLayout>
                <!--新品专区-->
                <com.example.xcloudkt.view.layout.ScrollRecyclerView
                    android:id="@+id/recyclerView_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp24"
                    android:overScrollMode="never" />

                <RelativeLayout
                    android:id="@+id/rl_new_pro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp14"
                    android:paddingLeft="@dimen/dp16"
                    android:paddingRight="@dimen/dp16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableStart="@drawable/home_new_pro_left"
                        android:drawablePadding="@dimen/dp3"
                        android:text="@string/home_new_pro"
                        android:textColor="@color/color33"
                        android:textSize="@dimen/font_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_new_right_pro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawableRight="@drawable/tip_to_right"
                        android:drawablePadding="@dimen/dp2"
                        android:text="@string/more"
                        android:textColor="@color/color33"
                        android:textSize="@dimen/font_size_11"
                        android:visibility="visible" />

                </RelativeLayout>
                <!--新品抢先知-->
                <com.example.xcloudkt.view.layout.ScrollRecyclerView
                    android:id="@+id/recyclerView_new_pro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp24"
                    android:overScrollMode="never" />

                <!--活动专区-->
                <RelativeLayout
                    android:id="@+id/rl_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.example.xcloudkt.view.layout.ScrollRecyclerView
                        android:id="@+id/recyclerView_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp24"
                        android:overScrollMode="never"
                        android:paddingLeft="@dimen/dp16"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_activity_invite"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp120"
                        android:layout_marginTop="-10dp"
                        android:layout_marginBottom="@dimen/dp20"
                        android:src="@drawable/default_banner"
                        android:visibility="gone" />

                </RelativeLayout>
                <!--品牌专区-->
                <RelativeLayout
                    android:id="@+id/rl_band"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp14"
                    android:paddingLeft="@dimen/dp16"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/home_left_band"
                        android:drawablePadding="@dimen/dp3"
                        android:text="@string/home_brand"
                        android:textColor="@color/color33"
                        android:textSize="@dimen/font_size_16"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/fl_band"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp24"
                    android:orientation="vertical">

                    <com.example.xcloudkt.view.layout.ScrollRecyclerView
                        android:id="@+id/recyclerView_band"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp224" />

                </LinearLayout>
                <!--今日特惠专区-->
                <RelativeLayout
                    android:id="@+id/rl_today"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginBottom="@dimen/dp14">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/home_left_today"
                        android:drawablePadding="@dimen/dp3"
                        android:text="@string/home_today"
                        android:textColor="@color/color33"
                        android:textSize="@dimen/font_size_16"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_tody"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>

            </LinearLayout>
        </com.example.xcloudkt.view.layout.RecyclerScrollView>

    </com.example.xcloudkt.view.layout.EmptyLayout>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>